+ funny firefox bug where buttons jumps very fast
Bug #349405
Time:

--- a/automatweb/css/style.css
+++ b/automatweb/css/style.css
@@ -1516,15 +1516,16 @@ font-size: 10px;
 	clear: both
 }
 
-.aw04toolbarbutton {
-        float: left;
+.aw04toolbarbutton,
+.aw04toolbarbuttonhover {
 		height: 14px;
-        padding: 4px;
+        padding: 4px 0 0 0;
 		font-size: 11px;
 		text-align: center;
 		border-style: solid;
         border-width: 1px;
         border-color: #E1E1E1;
+		border: 0;
 }
 /* End /automatweb/css/aw06.css */ 
 
